getDescriptionByLength corrected. removed: try catch on getDescriptionLength